[project]
name = "bindcraft-nhej"
version = "0.1.0"
description = "BindCraft NHEJ - Protein binder design using non-homologous end joining"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "BindCraft NHEJ Team"}
]
keywords = ["protein", "design", "bindcraft", "nhej", "molecular-biology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "numpy>=1.22.0",
    "pandas>=1.5.0",
    "jax==0.4.30",
    "jaxlib==0.4.30",
    "dm-haiku==0.0.12",
    "chex==0.1.86", 
    "optax==0.1.7",
    "ml-dtypes>=0.2.0",
    "scipy>=1.9.0",
    "absl-py>=0.7.1",
    "tabulate>=0.8.9",
    "flax>=0.7.1",
    "typing-extensions>=4.2.0",
    "toolz>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "py3Dmol>=2.0.0",
]
cuda = [
    "jax[cuda12]==0.4.30",
]

[project.scripts]
bindcraft-nhej = "bindcraft_nhej.cli.main:cli"

[project.urls]
Homepage = "https://github.com/your-username/bindcraft-nhej"
Repository = "https://github.com/your-username/bindcraft-nhej.git"
Issues = "https://github.com/your-username/bindcraft-nhej/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bindcraft_nhej"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=bindcraft_nhej --cov-report=term-missing"